--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -1,50 +1,116 @@
 ---
-title: 'Hello world: how I built this site'
-abstract: I originally built this portfolio site back in 2018, and since then it's evolved quite a bit. Recently I migrated from Create React App to Next.js and made some major upgrades in the process.
-date: '2022-04-21'
+title: 'Hello World'
+abstract: Get to know everything about me
+date: '2022-11-21'
 banner: /static/hello-world-banner.jpg
 ---
 
-## How it all started
+## Greetings ^.^
 
-Back in 2018 I needed to update my portfolio site (as designers are wont to do). I thought I'd steer away from current trends and build a site that tapped into the 80s and 90s Cyberpunk aesthetic. The genre contains some of my favorite movies like Ghost in the Shell (1995), The Matrix (1999), and Akira (1988). That's where I borrowed few visual motifs like the bold katakana lettering on the homepage and the text decoding effect as a homage to the Matrix's "Digital rain" effect, which was itself inspired by Ghost in the Shell's opening credits. There's even a nod to Ghost in the Shell on my [404 page](/404).
+Hello!
 
-![A scene from Ghost in the Shell (1995) with the Major cloaking with thermoptic camouflage; the poster for Akira; The Matrix's digital rain effect](/static/inspiration.png)
+I am **Mayank Jain!**
 
-## The first iteration
+I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be a Software Developer by profession, and look to my parents for motivation
 
-I was learning React when I first built this website, and while overkill for a personal portfolio site, it was a great opportunity to learn and experiment with learning it. I've found the best way to learn is by actually making something that you intend to use and ship.
+## Experience
 
-The no-brainer choice at the time was Create React App. It served me well in getting things up and running without having to fuss about with config. On top of that, I was using Styled Components, Tween.js, and React Transition Group. I was also playing with some early Three.js effects like the displacement sphere that still resides on the homepage.
+1.  _Creative & Operations Executive_ | **Microsoft Student Community, KIIT Chapter**
 
-Since then I've used this website as a playground for experimenting with new tech and techniques, so over time I've overhauled pretty much everything. A big change along the way was replacing images of my work in static mockups with real-time rendered interactive 3D devices using models I created for the [Clay Mockups 3D Figma plugin](https://www.figma.com/community/plugin/819335598581469537/Clay-Mockups-3D).
+        <img src="/static/msc.png" align="center" width="100%" />
 
-![Thumbnail for my Clay Mockups 3D plugin](/static/clay-mockups.png)
+         <ul>
 
-## Migrating to Next.js
+    <li>
+      Joined the Community during my first year of engineering, as a content writer.
+    </li>
 
-With Create React App I was using a somewhat janky and unmaintained package to prerender the site as static HTML in Puppeteer. This worked okay for the most part, but I wanted a more robust solution for posting articles (like this one you're reading) using MDX. I had a half baked version of this lying dormant in the repo, but it never felt good enough to publish. I looked at a few options like Gatsby, Vite, and Parcel, and Remix, but Next.js stood out as the most suited to my needs.
+             <li>During the course of my journey, I also joined the Operations team and helped manage a team of 100+ members</li>
+             <li>  My love for Web Development started from here as well</li>
 
-- The site is now based on Next.js. Is a much better fit than Create React App. For now I'm just using it to create a static export, but maybe I'll add some server rendered stuff in the future.
-- Styling is now vanilla CSS with postcss to add support for the future native CSS nesting and custom media queries features. I'm using CSS modules instead of BEM syntax to avoid style conflicts.
-- For generating pages from `.mdx` files, I'm using Kent C Dodds' [mdx-bundler](https://github.com/kentcdodds/mdx-bundler). In combination with Next.js it makes generating pages from `.mdx` files really quick and simple.
-- For animation I've moved from Tween.js and React Transition Group to just Framer Motion.
-- 3D effects are still all using Three.js, but I've added `three-stdlib` as a better maintained replacement for modules from Three's examples.
+         </ul>
 
-## Not all smooth sailing
+2.  _Senior Executive_ | **KIIT Entrepreneurship Cell**
+    <img
+      src="/static/ecell.png"
+      style={{ display: 'flex', alignItems: 'center', justifyContent: 'center' }}
+      align="center"
+      width="50%"
+    />
+    <ul>
+      <li>
+        Joined the official Entrepreneurship Cell of my University as a Content Marketer
+        during my second year of Engineering
+      </li>
+      <li>
+        Worked hard designing and developing Marketing campaigns in terms of creative
+        copywriting and idea generation for the events organised by the Cell.
+      </li>
+    </ul>
 
-For the most part, the migration was pretty straight-forward. The way I has structured the site with React Router lent itself well to conforming with Next.js's file-based routing, and I was already using postcss for styling. I did, however, encounter a couple of problems:
+## Skills & Tools
 
-### 1. Route transitions
+1. HTML, CSS
+2. JavaScript
+3. MongoDB
+4. ExpressJS
+5. ReactJS
+6. NodeJS
+7. NextJS
+8. Visual Studio Code
+9. Material UI / Bootstrap / Ant Design
 
-There was a bit of a conflict when it came to animated route transitions. Next.js will immediately yank out all of the styles for the previous page when navigating to a new one. This works great when you're not animating between pages because it cleans up any unused styles form hanging around. When you are animating the page transition though, all of a sudden the previous page becomes jarringly completely unstyled as it transitions out. This problem one of [the most commented and reacted to issues](https://github.com/vercel/next.js/issues/17464) on the Next.js repo, so hopefully there's a fix soon, but for now I've dropped in a [hack to fix things](https://github.com/vercel/next.js/issues/17464#issuecomment-796430107) from the issue's comments.
+## Education
 
-### 2. Scroll restoration
+<div>
 
-Somewhat related to the route transitions, I had to opt out of both Next.js's and the native browser's scroll restoration in order to prevent the browser immediately scrolling to the top when the page started transitioning out. Next.js also doesn't appear to handle shifting focus when linking to the id of an element within the page, so I added that in for accessibility.
+<div
+  style={{
+    display: 'flex',
+    alignItems: 'center',
 
-## Looking back, and forward
+    marginTop: '20px',
 
-It's been pretty neat to see how popular the site's been on Github, with 500 stars (as of writing this post). It's also neat seeing how people adapt it to their own style and modify it, which is part of the reason I made it open source. I want others to be able to take it apart and see how it's made, learn from and improve upon it. That's what inspect element used to be like on the web, but with modern sites compiling and minifying and injecting garbled strings into css classes that's not as simple these days. The next best thing I could do was to open source it.
+}}
 
-I look forward to continuing to use this site as a playground, and it'll be interesting to compare the next iteration to where it is today.
+>
+
+  <img src="/static/kiit.png" style={{ width: '20%', marginRight: '10px' }} />
+  **<a href="https://kiit.ac.in" target="_blank" style={{color:'inherit',textDecoration:'underline'}}>Kalinga Institute of Industrial Technology (KIIT University)</a>**, <br></br>*Expected 2024* , *Current CGPA: 9.48*
+  
+</div>
+
+<hr style={{ color: 'gray', margin: '30px' }}></hr>
+
+<div
+  style={{
+    display: 'flex',
+    alignItems: 'center',
+
+    marginTop: '20px',
+
+}}
+
+>
+
+**<a href="https://staugustinesdayschool.com/kolkata/home.html" target="\_blank" style={{color:'inherit',textDecoration:'underline'}}>St. Augustine's Day School, Kolkata</a>** <br></br>_Graduated 2019_ , _High School_
+
+<img src="/static/stads.png" style={{ width: '20%', marginRight: '10px' }} />
+
+</div>
+
+</div>
+
+## Languages
+
+English, Hindi, Bengali
+
+## Coursework
+
+1. Data Structure and Algorithms
+2. Design and Analysis of Algorithms
+3. Computer Networks
+4. Database Management System
+5. Software Engineering
+6. Object Oriented Programming
+7. Big Data
