fixed some more build errors

--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -76,7 +76,7 @@ I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be 
 >
 
   <img src="/static/kiit.png" style={{ width: '20%', marginRight: '10px' }} />
-  **<a href="https://kiit.ac.in" target="_blank" style={{color:'inherit',textDecoration:'underline'}}>Kalinga Institute of Industrial Technology (KIIT University)</a>**, <br></br>*Expected 2024* , *Current CGPA: 9.48*
+  **<a href="https://kiit.ac.in" target="_blank" rel="noreferrer" style={{color:'inherit',textDecoration:'underline'}}>Kalinga Institute of Industrial Technology (KIIT University)</a>**, <br></br>*Expected 2024* , *Current CGPA: 9.48*
   
 </div>
 
@@ -93,7 +93,7 @@ I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be 
 
 >
 
-**<a href="https://staugustinesdayschool.com/kolkata/home.html" target="\_blank" style={{color:'inherit',textDecoration:'underline'}}>St. Augustine's Day School, Kolkata</a>** <br></br>_Graduated 2019_ , _High School_
+**<a href="https://staugustinesdayschool.com/kolkata/home.html" target="\_blank" rel="noreferrer" style={{color:'inherit',textDecoration:'underline'}}>St. Augustine's Day School, Kolkata</a>** <br></br>_Graduated 2019_ , _High School_
 
 <img src="/static/stads.png" style={{ width: '20%', marginRight: '10px' }} />
 
