updated resume link

--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Hello World'
 abstract: Get to know everything about me
-date: '2022-11-21'
+date: '2023-06-24'
 banner: /static/hello-world-banner.jpg
 ---
 
@@ -15,7 +15,7 @@ I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be 
 
 ## Experience
 
-1.  _Creative & Operations Executive_ | **Microsoft Student Community, KIIT Chapter**
+1.  _Creative Lead & Operations Executive_ | **Microsoft Learn Student Ambassadors, KIIT Chapter**
 
         <img src="/static/msc.png" align="center" width="100%" />
 
@@ -27,6 +27,7 @@ I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be 
 
              <li>During the course of my journey, I also joined the Operations team and helped manage a team of 100+ members</li>
              <li>  My love for Web Development started from here as well</li>
+             <li>Gradually, I got promoted from being a Content Writer to being an Operations Executive, and finally took responsibiltiy of the position of Creative Lead where I was directly in charge of leading a team of more than 100 members</li>
 
          </ul>
 
@@ -59,6 +60,9 @@ I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be 
 7. NextJS
 8. Visual Studio Code
 9. Material UI / Bootstrap / Ant Design
+10. Docker
+11. Jenkins
+12. AWS
 
 ## Education
 
@@ -76,7 +80,7 @@ I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be 
 >
 
   <img src="/static/kiit.png" style={{ width: '20%', marginRight: '10px' }} />
-  **<a href="https://kiit.ac.in" target="_blank" rel="noreferrer" style={{color:'inherit',textDecoration:'underline'}}>Kalinga Institute of Industrial Technology (KIIT University)</a>**, <br></br>*Expected 2024* , *Current CGPA: 9.48*
+  **<a href="https://kiit.ac.in" target="_blank" rel="noreferrer" style={{color:'inherit',textDecoration:'underline'}}>Kalinga Institute of Industrial Technology (KIIT University)</a>**, <br></br>*Expected 2024* , *Current CGPA: 9.30*
   
 </div>
 
@@ -114,3 +118,7 @@ English, Hindi, Bengali
 5. Software Engineering
 6. Object Oriented Programming
 7. Big Data
+
+## Achievements
+
+1. KIIT Merit Scholarship Holder
