Change links and name

--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -9,7 +9,7 @@ banner: /static/hello-world-banner.jpg
 
 Hello!
 
-I am **Mayank Jain!**
+I am **Raj Singh!**
 
 I'm a Web Developer by passion, an upcoming Engineer by education, aiming to be a Software Developer by profession, and look to my parents for motivation
 
